--- a/assets/ie-alert.scss.liquid
+++ b/assets/ie-alert.scss.liquid
@@ -16,15 +16,17 @@
     -ms-flex: 2; /* IE 10 */ 
   	flex:2;
     margin:auto;
-    max-width:450px;
+    max-width:50%;
+    min-height:50%;
     background: #015287;
     padding:10px 20px 40px;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
-    cursor:pointer;
+/*     cursor:pointer; */
     *{
       color:white !important;
     }
-    h6{ font-size: 1.14em; }
+    h6{ font-size: 30px; }
+    p{font-size:20px !important;}
     img{
       width:200px;
       height:auto;
