--- a/snippets/order-history-Printer.liquid
+++ b/snippets/order-history-Printer.liquid
@@ -105,7 +105,7 @@
                  }
                    
                   $('#OrderEditModal .tracking_url').val(data.order.fulfillments[0].tracking_url);
-  				}
+  				}else changeTracking(false);
                 
                 
                  
