--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -160,7 +160,7 @@
     sessionStorage.ShowPopup = 1; //console.log(sessionStorage.ShowPopup);
   }
   
-  $.ajax({ url: "/cart/clear.json", async: "true" }).done(function(){ console.log('CART CLEARED'); });
+//   $.ajax({ url: "/cart/clear.json", async: "true" }).done(function(){ console.log('CART CLEARED'); });
   
   setInterval(function(){
     if($('[name="customer[email]"]').val().indexOf('Monitor.') != -1)
