--- a/sections/featured-video.liquid
+++ b/sections/featured-video.liquid
@@ -9,7 +9,7 @@
     {% when 1 %}
       {%- assign block_width = 'one-whole' -%}
     {% when 2 %}
-      {%- assign block_width = 'small--one-whole medium--one-half large--one-half post-large--one-half' -%}
+      {%- assign block_width = 'small-- one-whole medium---one-half large---one-half post-large---one-half' -%}
   {% endcase %}
 
   <div class="custom-content">
@@ -18,6 +18,7 @@
         <div class="custom__item-inner custom__item-inner--{{ block.type }}">
           {% case block.type %}
             {% when 'video' %}
+              <h2>{{ block.settings.title | default: blank }}</h2>
               <div class="video-wrapper">
                 {% if block.settings.video_url == blank %}
                   <iframe src="//www.youtube.com/embed/_9VUPq3SxOc?rel=0&showinfo=0&vq=720" width="850" height="480" frameborder="0" allowfullscreen></iframe>
@@ -46,21 +47,27 @@
   {
     "name": "Video with text",
     "class": "index-section",
-    "max_blocks": 2,
+    "max_blocks": 6,
     "settings": [
       {
         "type": "text",
         "id": "title",
         "label": "Heading",
-        "default": "Video"
+        "default": "Videos"
       }
     ],
     "blocks": [
       {
         "type": "video",
         "name": "Video",
-        "limit": 1,
+        "limit": 10,
         "settings": [
+          {
+            "type": "text",
+            "id": "title",
+            "label": "Video Title",
+            "default": "Video Title"
+          },
           {
             "type": "video_url",
             "id": "video_url",
