--- a/templates/customers/addresses.liquid
+++ b/templates/customers/addresses.liquid
@@ -30,10 +30,13 @@
           </div>
 
         </div>
-
-<!--         <label for="AddressCompanyNew">{{ 'customer.addresses.company' | t }}</label>
-        <input type="text" id="AddressCompanyNew" class="address_form" name="address[company]" value="{{form.company}}" autocapitalize="words"> -->
-
+		
+      	{% assign Role_Printer = 'general.Role.Printer' | t %}
+      	{% if customer.tags contains Role_Printer %}
+        <label for="AddressCompanyNew">{{ 'customer.addresses.company' | t }}</label>
+        <input type="text" id="AddressCompanyNew" class="address_form" name="address[company]" value="{{form.company | default: customer.default_address.company}}" required="required" autocapitalize="words">
+		{% endif %}
+      
         <label for="AddressAddress1New">{{ 'customer.addresses.address1' | t }}</label>
         <input type="text" id="AddressAddress1New" class="address_form" name="address[address1]" value="{{form.address1}}" autocapitalize="words">
 
@@ -125,7 +128,7 @@
           </div>
   
           <label for="AddressCompany_{{form.id}}">{{ 'customer.addresses.company' | t }}</label>
-          <input type="text" id="AddressCompany_{{form.id}}" class="address_form" name="address[company]" value="{{form.company}}" autocapitalize="words">
+          <input type="text" id="AddressCompany_{{form.id}}" required="required" class="address_form" name="address[company]" value="{{form.company | default: customer.default_address.company}}" autocapitalize="words">
   
           <label for="AddressAddress1_{{form.id}}">{{ 'customer.addresses.address1' | t }}</label>
           <input type="text" id="AddressAddress1_{{form.id}}" class="address_form" name="address[address1]" value="{{form.address1}}" autocapitalize="words">
