--- a/templates/search.editorder.liquid
+++ b/templates/search.editorder.liquid
@@ -1,1 +1,6 @@
-{% layout none %}loadproducts({% paginate search.results by 50 %}{{ search.results | json | default: "[]" }}{% endpaginate %})
+{% layout none %}
+loadproducts(
+  {% paginate search.results by 50 %}
+  {{ search.results | json | default: "[]" }}
+  {% endpaginate %}
+)
